# cordis-pic-ror

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
docs/: curation.html  data.html  data.js  index.html  organizations-coverage.md  organizations-pipeline.md  script.js  style.css
output/: pic_mapping.csv  summary.json
overrides/: pic_ror_overrides.yaml
overrides/ai_review/: README.md  top_3000.yaml
scripts/: build_docs.py  coverage.py  derive.py  export_outputs.py  import.py  label_review.py  pipeline.py  report.py  review_queue.py
